syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lorelib.rpc.grpc";

service HelloService {
    rpc helloString (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string word = 1;
}

message HelloReply {
    string message = 1;
}
